# capnproto-java

./: .classpath  .gitignore  .gitlab-ci.yml  .project  .travis.yml  CHANGELOG.md  CONTRIBUTERS  CONTRIBUTORS  LICENSE  Makefile  PUBLISHING.md  README.md  RELEASE-PROCESS.md  do_benchmarks.bash  foo.raw  gen  index.html  index.md  news.html  pom.xml
.github/workflows/: ci.yml  maven.yml
.run/: Calculator.run.xml  CalculatorClient.run.xml  CalculatorServer.run.xml
_includes/: footer.html  header.html
_layouts/: post.html
_posts/: 2014-10-13-alpha-release.md
benchmark/: build_schema  do_benchmarks  pom.xml
capnproto-benchmarks/: Makefile  pom.xml
capnproto-compiler/: Makefile
capnproto-compiler-tests/: pom.xml
capnproto-compiler/src/: capnpc-java.c++
capnproto-examples/: pom.xml
capnproto-runtime/: pom.xml
cmake/: CMakeLists.txt  README.md
compiler/: build_schema  pom.xml
doc/: publishing.md
examples/: Addressbook.java  AddressbookMain.java  build_schema  pom.xml
project/: build.scala  plugins.sbt
runtime/: build_schema  pom.xml
runtime-rpc/: pom.xml
security-advisories/: 2021-09-30-0-cpu-amplification.md  2021-09-30-1-excessive-memory-allocation.md  2021-10-04-0-cpu-amplification.md
src/capnp/: AnyPointer.java  FieldSize.java  FromStructBuilder.java  FromStructReader.java  InputStreamMessageReader.java  ListPointer.java  ListReader.java  MessageBuilder.java  MessageReader.java  PointerBuilder.java  PointerReader.java  SegmentBuilder.java  SegmentReader.java  Text.java  (+10 more)
stylesheets/: stylesheet.css
website/: _config.yml  index.md
(+292 files in other folders)
